other in hotels

--- a/hotels.html
+++ b/hotels.html
@@ -148,8 +148,8 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Closest to the park entrance (800 m on foot)</li>
-                                 <li>Giraffe-necked beetles on site</li>
+                                 <li>Closest hotel to the national park entrance, just 800 meters away</li>
+                                 <li>Gifaffe-necked beetles live in the gardens on site</li>
                               </ul>
                            </li>
                         </ul>
@@ -252,7 +252,8 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Breakfast included in price</li>
+                                 <li>Breakfast is included for all rooms</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
@@ -351,8 +352,8 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Private circuit to walk on close to river</li>
-                                 <li>Lemurs often hang out in the trees in the hotel</li>
+                                 <li>Has a private park ciruit near Namorana river</li>
+                                 <li>Lemurs often hang out in trees just outside the rooms</li>
                               </ul>
                            </li>
                         </ul>
@@ -448,8 +449,9 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Private parking </li>
-                                 <li>Guard tower with guard </li>
+                                 <li>Private parking lot</li>
+                                 <li>Has a guard tower with a guard 24/7</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
@@ -540,6 +542,12 @@
                            <li><strong><u>Link :</u></strong>
                               <ul>
                                  <li><a href="https://web.facebook.com/iharyhotel", target="_blank">Facebook Ihary Hotel Ranomafana </a></li>
+                              </ul>
+                           </li>
+                           <li><strong><u>Other :</u></strong>
+                              <ul>
+                                 <li>One of the largest hotels</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
@@ -633,9 +641,9 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>18 person conference room for hire 70.000 MGA per day </li>
-                                 <li>Coffee machine </li>
-                                 <li>Part of the Catholic diocese </li>
+                                 <li>18 person conference room available for 70.000 MGA per day</li>
+                                 <li>Part of the Catholic diocese</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
@@ -708,6 +716,7 @@
                                  <li>Twin : 70.000 MGA</li>
                                  <li>Family (1 double 2 twin) : 120.000 MGA</li>
                                  <li>Family (1 double 3 twin) : 140.000 MGA</li>
+                                 <li>Supplemental bed (upon request): 25,000 MGA</li>
                               </ul>
                            </li>
                            <br>
@@ -728,9 +737,9 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Possible to add supplemental bed for 25.000 MGA</li>
-                                 <li>Gazebo water feature</li>
-                                 <li>Bar with sports on TV</li>
+                                 <li>Serene pond with gazebo on site</li>
+                                 <li>Bar with TV that plays sports</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
@@ -823,7 +832,12 @@
                                  <li><a href="https://www.hotelmanja.mg", target="_blank">www.hotelmanja.mg </a></li>
                               </ul>
                            </li>
-                        
+                           <li><strong><u>Other :</u></strong>
+                              <ul>
+                                 <li>Best voanjobory in Madagascar, a must try dish</li>
+                                 <li>In town</li>
+                              </ul>
+                           </li>
                         </ul>
                      </div>
                   </div>
@@ -926,11 +940,12 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Bar with wide variety of rum arrange </li>
-                                 <li>Nature walk</li>
-                                 <li>River access </li>
-                                 <li>Spa with massages </li>
-                                 <li>Gym  </li>
+                                 <li>Bar with a famous variety of rum arrange</li>
+                                 <li>Calming nature walk on site</li>
+                                 <li>River access</li>
+                                 <li>Spa with massages available</li>
+                                 <li>Gym on site</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
@@ -1029,9 +1044,8 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Swimming pool almost done </li>
-                                 <li>Waterfalls on grounds</li>
-                                 <li>Bar  </li>
+                                 <li>Swimming pool nearly complete</li>
+                                 <li>Waterfall on site</li>
                               </ul>
                            </li>
                         </ul>
@@ -1119,6 +1133,13 @@
                                  <li>By pre-order only </li>
                                  <li>Breakfast : 15.000 continental 20.000 american</li>
                                  <li>Lunch/Dinner : 25-40.000 MGA</li>
+                              </ul>
+                           </li>
+                           <br>
+                           <li><strong><u>Other :</u></strong>
+                              <ul>
+                                 <li>Only hotel with five person rooms</li>
+                                 <li>In town (barely)</li>
                               </ul>
                            </li>
                         </ul>
@@ -1211,7 +1232,7 @@
                            <br>
                            <li><strong><u>Other :</u></strong>
                               <ul>
-                                 <li>Breakfast included in room price </li>
+                                 <li>Breakfast is included for all rooms</li>
                               </ul>
                            </li>
                         </ul>
@@ -1296,6 +1317,13 @@
                            <li><strong><u>Dining :</u></strong>
                               <ul>
                                  <li>Hotely style restaurant </li>
+                              </ul>
+                           </li>
+                           <br>
+                           <li><strong><u>Other :</u></strong>
+                              <ul>
+                                 <li>Private parking lot</li>
+                                 <li>In town</li>
                               </ul>
                            </li>
                         </ul>
