--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
-
+                     <div class="room_img">
+                        <figure><img src="images/hotels/mirary1.webp" class="d-block img-carousel" alt="#"/></figure>
+                     </div>
                      <div class="bed_room">
                         <h3>Mirary</h3>
                         <a class="read_more" href="hotels.html#mirary"> More</a>
@@ -265,7 +267,9 @@
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
-                    
+                     <div class="room_img">
+                        <figure><img src="images/hotels/hostels1.webp" class="d-block img-carousel" alt="#"/></figure>
+                     </div>
                      <div class="bed_room">
                         <h3>Chez Rose, Hotel In-Kavana</h3>
                         <a class="read_more" href="hotels.html#other-hotels"> More</a>
@@ -274,7 +278,9 @@
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
-                    
+                     <div class="room_img">
+                        <figure><img src="images/hotels/hostels3.webp" class="d-block img-carousel" alt="#"/></figure>
+                     </div>
                      <div class="bed_room">
                         <h3>Coin D’Or, La Palmeraie</h3>
                         <a class="read_more" href="hotels.html#other-hotels"> More</a>
