--- a/otheractivities.html
+++ b/otheractivities.html
@@ -152,11 +152,10 @@
              <br>
 
              <div class="row align-items-center" id="arboretum">
-
                 <div class="col-md-12">
                    <div class="titlepage">
                      <h2>Arboretum</h2>
-                     <p class="text-justify margin_0">
+                     <p class="text-justify">
                         <img src="images/arboretum.webp" class="img-fluid float-left" style="margin-right: 15px; width: 350px;" alt="#"/>
                         The Ranomafana Arboretum was founded in 1991 by Dan Turk. It is located just 4 km east of Ranomafana on National Route 25 - a two minute drive or a short and easy 20 minute walk from town. It houses over 50 species of trees, some native to the southeast of Madagascar and some brought to the island through international trade centuries ago. It is also home to lowland-streaked tenrecs, chameleons, butterflies, frogs, and all sorts of interesting insects. 
                         <br><br>
@@ -166,24 +165,21 @@
                      </p>
                     </div>
                 </div>
-                <br>
- 
              </div>
-
+             <br>
+             <br>
              <div class="row align-items-center" id="valbio">
                 <div class="col-md-12">
                    <div class="titlepage">
                      <h2>Centre Valbio</h2>
-                     <p class="text-justify margin_0">
+                     <p class="text-justify">
                         <img src="images/valbio.webp" class="img-fluid float-right" style="margin-left: 15px; width: 500px;" alt="#"/>
                         Centre ValBio is an American research station founded in 2003 by primatologist Dr. Patricia Wright. Today it is functionally run by a team of Malagasy and American full-time researchers and staff. They regularly host talks about ongoing research, trainings for future researchers, and tours of their facility near the entrance to the national park.                         <br><br>
                         More information on their work and how to visit can be found at their website here: 
-                        <a href="https://www.stonybrook.edu/commcms/centre-valbio/" target="_blank">Home | Centre ValBio (stonybrook.edu) </a>                        </p>
+                        <a href="https://www.stonybrook.edu/commcms/centre-valbio/" target="_blank" style="margin: 0; padding: 0;">Home | Centre ValBio (stonybrook.edu) </a>                        </p>
                      </p>
-                      
                     </div>
                 </div>
-                <br>
              </div>
 
              <div class="row" id="waterfall">
