--- a/parkinformation.html
+++ b/parkinformation.html
@@ -121,28 +121,34 @@
                <div class="row align-items-center">
                   <div class="col-md-12">
                      <div class="titlepage">
-                        <img src="images/parc3.webp" class="img-fluid float-left" style="margin-right: 15px; width: 250px;" alt="#"/>
+                        <img src="images/parc12.webp" class="img-fluid float-left" style="margin-right: 15px; width: 400px;" alt="#"/>
+
                         <p class="text-justify" style="margin: 0;">
                            The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents.
-                        </p>
-                     </div>
-                  </div>
-                  
-               <br>
-               <div class="row align-items-center">
-                  <div class="col-md-12">
-                     <div class="titlepage">
-                        <img src="images/parc12.webp" class="img-fluid float-right" style="margin-left: 15px; width: 400px;" alt="#"/>
-
-                        <p class="text-justify" style="margin-right: 15px;">
+                           <br>
                            Other circuits available include Vatoharanana, Valohoaka, Sahamalaotra. Each of these circuits give you a unique glimpse into Ranomafana, and each has varying degrees of difficulty. It is important to note that whichever circuit you choose, expressing your physical ability and concerns to guides is always welcome, and they are more than capable of adjusting the route they take you on to fit your goals.
                         </p>
                      </div>
                   </div>
-               </div>
-               
-               <br>
-               <br>
+                  <div class="col-md-12">
+                     <div class="row"> <!-- Ajoutez une classe "row" ici -->
+                        <div class="col-md-4 col-sm-6">
+                           <div class="gallery_img">
+                              <figure><img src="images/parc3.webp" class="d-block img-carousel" alt="#"/></figure>
+                           </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                           <div class="gallery_img">
+                              <figure><img src="images/parc15.webp" class="d-block img-carousel" alt="#"/></figure>
+                           </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                           <div class="gallery_img">
+                              <figure><img src="images/parc16.webp" class="d-block img-carousel" alt="#"/></figure>
+                           </div>
+                        </div>
+                     </div>
+                  </div>  
                <div class="col-md-12">
                   <div class="titlepage">
                      <p class="margin_0">Overall pricing depends largely on the circuit and guide chosen, and what you're hoping to get out of Ranomafana National Park. Each visitor must purchase a ticket to enter, and pay for the guide fees of the local guide who will show you around the forest.</p>
