--- a/parkinformation.html
+++ b/parkinformation.html
@@ -160,7 +160,8 @@
                         </ul>
                         <br>
 
-                        <p class="margin_0" id="guide">                           <img src="images/parc10.webp" class="img-fluid float-right" style="margin-left: 15px; width: 500px;" alt="#"/>
+                        <p class="margin_0" id="guide">                           
+                           <img src="images/parc10.webp" class="img-fluid float-right" style="margin-left: 15px; width: 380px;" alt="#"/>
                            <b>Groups of 1-4 people should expect to take one guide, and groups 6+ people should take at least two guides. <br><u>Guide pricing is based on circuits and their length as follows:</u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Talatakely (Aureus) :</u> 90 000 MGA (2-4h)</li>
@@ -169,8 +170,8 @@
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Sahamalaotra  :</u> 90 000 MGA (2h)</li>
 
                         </ul>
-
                         <br>
+                        
                         <p class="margin_0" id="specialistguide"><b>Specialist guides can also be requested. These are experts in finding and describing birds, plants, and amphibians/reptiles.  <br><u>Because of their expertise, they are priced (regardless of circuit) accordingly:  </u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Birds :</u> 220 000 MGA</li>
